--- a/net-core-api/net-core-api.csproj
+++ b/net-core-api/net-core-api.csproj
@@ -10,6 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Owin" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Owin.Security.ActiveDirectory" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
